# Farm-AI

./: .env  .gitignore  Dockerfile  README.md  app.py  check_db_connection.py  deployment_guide.md  docker-compose.yml  entrypoint.sh  graph.py  ingest_knowledge.py  main.py  pyproject.toml  render.yaml  requirements.txt  run_farm_ai.sh  sms_server.py  verify_merged.py
EVAL/: evaluate_rag.py  evaluate_rag_no_bm25.py  final_rag_benchmark_report.md  ground_truth.json  rag_evaluation_report.md  rag_evaluation_report_no_bm25.md
agents/: agro_advisory.py  farmer_profile.py  formatter.py  knowledge_support.py  market_intelligence.py  plant_disease.py  supervisor.py  weather.py
core/: chat_history_manager.py  config.py  farm_log_manager.py  mcp_wrapper.py  memory_service.py  memory_store.py  models.py  profile_manager.py  rag_service.py
knowledge_base/farming_practices/: tomato_guide.md
tests/: check_adk.py  debug_db.py  debug_rag.py  test_agent_init.py  test_mcp_brave.py  test_mcp_ddg.py  test_mcp_http_endpoint.py  test_routing.py  test_routing_fix.py  verify_faiss.py  verify_mango.py  verify_market_agent_adk.py  verify_routing.py  verify_sms.py
tools/: geocoding_api.py  mcp_server_ddg.py  weather_api.py
