[project]
name = "farm-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-adk>=1.21.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.1",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.14.1",
    "streamlit>=1.50.0",
    "argon2-cffi>=23.1.0",
    "huggingface-hub>=0.23.0",
    "litellm>=1.80.10",
    "mcp>=1.24.0",
    "fastmcp>=2.14.0",
    "ddgs>=9.10.0",
    "nest-asyncio>=1.6.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "faiss-gpu-cu12>=1.8.0",
    "rank-bm25>=0.2.2",
    "pypdf>=6.5.0",
    "fastapi>=0.123.10",
    "uvicorn>=0.38.0",
    "twilio>=9.9.0",
    "python-multipart>=0.0.20",
    "faiss-cpu>=1.13.2",
]
